# nanoserve

./: .gitignore  .jiu.toml  Cargo.toml  README.md  index.html
.github/workflows/: release.yml
doc/: report.md
src/: cli.rs  error.rs  lib.rs  main.rs  request.rs  response.rs
tests/: integration_test.rs  slow-and-fast.sh
