[package]
name = "nanoserve"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Ground-up implementation of a nano HTTP server from TCP sockets"
keywords = ["http", "server", "tcp", "async", "socket"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/nanoserve"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
argh = { version = "0.1.13", optional = true, features = ["help"], default-features = false }
compio = { version = "0.16.0", features = ["runtime", "io" ] }

[[bin]]
name = "nanoserve"
required-features = ["cli"]

[features]
cli = ["argh", "compio/macros", "compio/signal"]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
